--- a/style.css
+++ b/style.css
@@ -111,21 +111,26 @@ body {
     box-shadow: 0px 10px 40px -12px #00ff8052;
 }
 
-@media only screen and (max-widht: 950px) {
+@media only screen and (max-width: 950px) {
     .card-login {
         width: 85%;
     }
 }
 
-@media only screen and (max-widht: 600px) {
+@media only screen and (max-width: 600px) {
+
+
     .main-login { 
         display: flex;
         flex-direction: column;
+        align-items: center;
+        width: 100vw;
+        height: 100vh;
     }
     .left-login > h1 {
         display: none;
-
     }
+
     .left-login {
         width: 100;
         height: auto;
@@ -138,8 +143,7 @@ body {
         width: 50vw;
     }
     .card-login{
-        width: 90%;
-        padding: 20px 25px;
+        width: 70%;
     }
 }
  
